--- a/css/style.css
+++ b/css/style.css
@@ -420,6 +420,7 @@ header .logo-letter{
     margin-top: 20%;
 }
 
+
 .container{
 
 
@@ -926,6 +927,13 @@ label{
     
 }
 
+#heading{
+
+    font-size: 2.5rem;
+
+
+}
+
 /* Cursor */
 
 .cursor{
@@ -960,6 +968,117 @@ label{
     transition-property: transform;
 }
 
+.project-showcase-container{
+
+    
+    display: none;
+    transition: all 2s ease-in;
+    
+
+}
+
+.project-showcase-container.active{
+
+    transition: display 2s ease-in;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: all 0.5s ease-in;
+    display: flex;
+    background-color: rgb(41, 155, 87);
+    min-height: 100vh;
+    min-width: 100vw;
+    z-index: 99;
+    
+
+}
+
+.showcase-container{
+
+    background-color: rgb(163, 100, 52);
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 2rem 0;
+}
+
+.showcase-container_header{
+
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    color: white;
+    margin-bottom: 4rem;
+}
+
+.showcase-container_header .info{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 60%;
+    
+}
+
+.showcase-container_description{
+
+    display: flex;
+    flex-direction: row;
+    margin: 2rem 0;
+    color: white;
+    
+}
+
+.big-description{
+
+    width: 50%;
+    font-size: 1.5rem;
+    font-weight: bold;
+    
+}
+
+.info-containers{
+
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid rgb(138, 138, 138);
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5rem 0;
+}
+
+.project-photos{
+
+   
+    position: absolute;
+    top: 15%;
+    right: 0;
+    background-color: rgb(138, 108, 17);
+    width: 2000px;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    
+
+}
+
+.project-photos .photo{
+
+    width: 50%;
+    height: auto;
+    margin-left: 4rem;
+
+}
+
+.photo img{
+
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+
+
+}
 
 @keyframes jump{
 
@@ -986,7 +1105,7 @@ label{
 
     from{
 
-        transform: translateY(-150px);
+        transform: translateY(50px);
         opacity: 0;
 
     }
