--- a/css/about.css
+++ b/css/about.css
@@ -60,7 +60,6 @@ body{
 
     display: flex;
     flex-direction: column;
-    border: 1px solid red;
     align-items: flex-start;
     justify-content: flex-start;
     width: 100%;
@@ -80,12 +79,18 @@ body{
 
 }
 
+.services-container:last-child{
+
+    border-bottom: 2px solid rgb(79, 79, 79);
+
+}
+
 .top-header{
 
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    
 }
 
 .open-tab{
@@ -104,30 +109,30 @@ body{
     opacity: 0;
     height: 0px;
     transition: all 0.5s ease-in;
-
+    line-height: 1.5em;
 }
 .bottom-window2{
 
     opacity: 0;
     height: 0px;
     transition: all 0.5s ease-out;
-
+    line-height: 1.5em;
 }
 
 .bottom-window1.active{
 
     opacity: 1;
-    height: auto;
-    background-color: red;
-    
+    height: 100%;
+    line-height: 1.5em;
+    margin-top: 2rem;
 }
 
 .bottom-window2.active{
 
     opacity: 1;
-    height: auto;
-    background-color: red;
-    
+    height: 100%;
+    line-height: 1.5em;
+    margin-top: 2rem;
 }
 
 .arrow-up{
@@ -235,7 +240,18 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
   
+}
+
+#web-gl-item{
+    
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+
 }
 
 .hobby-info p{
@@ -423,7 +439,6 @@ body{
     
         font-size: 1rem;
         width: 100%;
-        margin-top: 4rem;
     
     }
     
@@ -489,8 +504,8 @@ body{
     .headline-container{
     
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        flex-direction: column;
+        justify-content: flex-start;
         font-size: 2rem;
         width: 100%;
     
@@ -523,9 +538,8 @@ body{
     #heading{
 
         width: 100%;
-        border: 1px solid red;
         font-size: 24px;
-        padding-right: 2rem;
+        padding-right: 0rem;
         margin-left: 0;
     }
 
@@ -535,6 +549,11 @@ body{
 
     }
 
+    .headline-projects{
+
+        margin-left: 0rem;
+
+    }
     
 
 }
