--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 body{
 
+    background-color: rgb(225,223,221);
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
     overflow: hidden;
@@ -104,7 +105,6 @@ header{
     position: fixed;
     top: 0;
     width: 100%;
-    border: 1px solid red;
     z-index: 9;
     
 }
@@ -367,16 +367,16 @@ header .logo-letter{
 
     text-decoration: none;
     color: rgb(0, 0, 0);
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
-
+    font-family: 'Dancing Script', cursive;
 
 }
 
 .hero-slider{
 
     margin-top: 4rem;
-    border: 1px solid red;
+   
    
     
 
@@ -453,7 +453,6 @@ header .logo-letter{
     flex-direction: row;
     justify-content: space-between;
     min-height: 100vh;
-    border: 1px solid red;
     max-width: 1300px;
     width: 100%;
     margin: 0 auto;
@@ -467,23 +466,27 @@ header .logo-letter{
     flex-direction: column;
     max-width: 1300px;
     margin: 0 auto;
-
-
+    
 }
 
 .short-about{
 
-    border: 1px solid blue;
+   
     width: 100%;
     font-size: 1rem;
-    margin: 0;
     padding: 0;
+
+}
+
+.short-about_m-10{
+
+    margin-left: 10rem;
+
 
 }
 
 .slide-number{
 
-    border: 1px solid rgb(119, 255, 0);
     font-size: 2.5rem;
     
 }
@@ -638,7 +641,7 @@ header .logo-letter{
 
 
 .slide-name{
-    border: 1px solid red;
+
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -654,7 +657,6 @@ header .logo-letter{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: 1px solid rgb(136, 255, 0);
     margin-top: 5rem;
     position: relative;
     width: 100%;
@@ -693,7 +695,7 @@ header .logo-letter{
 
     width: 50%;
     height: auto;
-    border: 1px solid red;
+    
    
 
 }
@@ -727,12 +729,12 @@ header .logo-letter{
 .hobbies h1{
 
     font-size: 7.5rem;
-    border: 1px solid red;
+   
 }
 
 .image-personal{
 
-    border: 1px solid red;
+    
     width: 400px;
     height: 400px;
     position: sticky;
@@ -742,7 +744,7 @@ header .logo-letter{
 }
 
 .image-personal img{
-    border: 1px solid red;
+    
     width: 100%;
     height: 100%;
 
@@ -767,7 +769,6 @@ header .logo-letter{
 .hobby-container{
 
     max-width: 100%;
-    border: 1px solid blue;
     height: 500px;
     margin: 0 auto;
 }
@@ -916,6 +917,25 @@ header .logo-letter{
     width: 500px;
 }
 
+.form-container{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1300px;
+    min-height: 100vh;
+    margin: 0 auto;
+    
+}
+
+.big-headline{
+
+    padding-bottom: 5rem;
+
+
+}
+
 /* Customize form style */
 
 input{
@@ -925,6 +945,7 @@ input{
     outline: 0;
     padding: 2rem 2rem 1rem 1rem;
     font-size: 1rem;
+    background-color: transparent;
     
 }
 
@@ -947,6 +968,12 @@ label{
     cursor: pointer;
     margin-top: 2rem;
     
+}
+
+textarea{
+
+    background-color: transparent;
+
 }
 
 .social-platforms .icons{
@@ -1045,7 +1072,6 @@ label{
 
 .showcase-container{
 
-    border: 2px solid red;
     margin: 0 auto;
     max-width: 1400px;
     padding: 2rem 2em;
@@ -1058,7 +1084,6 @@ label{
     font-size: 1.5rem;
     color: white;
     margin-bottom: 4rem;
-    border: 1px solid red;
    
     
 }
@@ -1075,7 +1100,7 @@ label{
     flex-direction: row;
     justify-content: space-between;
     width: 60%;
-    border: 1px solid red;
+
 }
 
 .showcase-container_description{
@@ -1084,7 +1109,7 @@ label{
     flex-direction: row;
     margin: 2rem 0;
     color: white;
-    border: 1px solid red;
+    
 }
 
 .big-description{
@@ -1130,7 +1155,7 @@ label{
 
 .project-photos .photo{
 
-    border: 1px solid red;
+    
     max-width: 100%;
     max-height: auto;
     margin-left: 4rem;
@@ -1265,6 +1290,12 @@ label{
     .container .short-about{
 
         width: 100%;
+        margin-top: 1rem;
+    }
+
+    .short-about_m-10{
+
+        margin-left: 0rem;
 
 
     }
@@ -1421,7 +1452,7 @@ label{
         width: 600px;
         position: relative;
         min-height: 100vh;
-        border: 1px solid red;
+        
     }
 
     .pre-loader-percentage{
