--- a/css/style.css
+++ b/css/style.css
@@ -396,14 +396,18 @@ header .logo-letter{
 
 .hover-image{
 
-    min-width: 300px;
-    min-height: 400px;
-    border: 1px solid black;
+    width: 300px;
+    height: 400px;
+    border: 5px solid white;
     transform: rotate(0deg);
     position: absolute;
     top: 30%;
     opacity: 0;
     transition: all 0.4s ease-in;
+
+    background-image: url('../images/profile-photo.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
     
 }
 
