Update Project repair + link

--- a/css/about.css
+++ b/css/about.css
@@ -577,5 +577,19 @@ canvas{
 
     }
     
+    #web-gl-item{
+
+        position: static;
+        width: 100%;
+        height: auto;
+
+    }
+
+    canvas{
+        
+        width: 100%;
+        height: auto;
+
+    }
 
 }
