--- a/css/style.css
+++ b/css/style.css
@@ -1610,5 +1610,17 @@ textarea{
 
     }
 
-    
+    .description .description-title{
+
+        font-size: 3rem;
+        width: 300px;
+    }
+
+    .hover-image{
+
+        width: 200px;
+        height: 300px;
+
+    }
+
 }
