--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,7 @@ header .logo-letter{
 
 .image-project{
 
-    width: 50%;
+    max-width: 50%;
     height: auto;
     
    
@@ -1152,7 +1152,8 @@ textarea{
    
     position: absolute;
     top: 10%;
-    right: 0;
+    right: 0%;
+    transform: translateX(0%);
     width: 2000px;
     height: 100vh;
     display: flex;
@@ -1389,7 +1390,7 @@ textarea{
 
     .image-project{
 
-        width: 100%;
+        min-width: 100%;
         z-index: 1;
 
     }
