--- a/css/about.css
+++ b/css/about.css
@@ -249,35 +249,23 @@ body{
     top: 0;
     right: 0;
     width: 50%;
-    height: 100%;
+    height: 50%;
+    
+
+    
 
 }
 
-.gamepad{
+#web-gl-item canvas{
 
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-
-}
-
-canvas{
-
+   
     display: block;
-
+    width: 100px;
+    height: 100px;
+    
 }
 
-.weight{
 
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-
-}
 
 .hobby-info p{
 
@@ -285,11 +273,6 @@ canvas{
 
 }
 
-#slide1{
-
-   
-
-}
 
 #slide2{
 
@@ -579,7 +562,10 @@ canvas{
     
     #web-gl-item{
 
-        position: static;
+        position: absolute;
+        left: -50%;
+        transform: translateX(50%);
+        top: 0;
         width: 100%;
         height: auto;
 
@@ -587,8 +573,9 @@ canvas{
 
     canvas{
         
-        width: 100%;
-        height: auto;
+        height: 50%;
+        transform: translateX(-50%);
+        margin-left: 50%;
 
     }
 
